ADD: Added registration and login via email

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://ikurskiywork:9org0n0ps1d@cluster0.j2uxj4y.mongodb.net/test"
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
