--- a/.env
+++ b/.env
@@ -6,3 +6,9 @@
 
 DATABASE_URL="mongodb+srv://ikurskiywork:9org0n0ps1d@cluster0.j2uxj4y.mongodb.net/test"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+GITHUB_ID=0ebc38ef6cc94cb720ef
+GITHUB_SECRET=6f5625059aec2883d380cc64f98e9b20642a45d3
+
+GOOGLE_CLIENT_ID=961340030931-ndvp02ni18kjj78rhurrud9d9r3rrnu7.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
